linked back the images

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -205,8 +205,8 @@
                                 <h4>WAVERS</h4>
                                 <p>Casual Style</p>
                             </div>
-                       <img class="waversDesktop" src="img/boardingillesteva.jpg" alt="Iconinc Man sitting on mountain With Illesteva" />
-                       <a href="leonardsMobile.html"><img class="waversMobile" alt="Iconinc Man sitting on mountain with Illesteva" src="img/boardingillestevaMobile.jpg" /></a>
+                       <img class="waversDesktop" src="img/boardingIllesteva.jpg" alt="Iconinc Man sitting on mountain With Illesteva" />
+                       <a href="leonardsMobile.html"><img class="waversMobile" alt="Iconinc Man sitting on mountain with Illesteva" src="img/boardingIllestevaMobile.jpg" /></a>
                     </div>
                        <div class="seeMoreBtn" id="waversBtn"><h4>SEE MORE</h4></div>
                 </div>
@@ -223,14 +223,14 @@
                     </div>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/LeonardsClearS.jpg" alt="Leonards Clear" />
+                        <img src="img/glassListing/leonardsClears.jpg" alt="Leonards Clear" />
                         <h3>Leonards | Clear</h3>
                         <h4>$390.00</h4>
                     </div>
                     </a>
                      <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/LeonardsHalf.jpg" alt="Leonards Half"  />
+                        <img src="img/glassListing/leonardsHalf.jpg" alt="Leonards Half"  />
                         <h3>Leonards | Half</h3>
                         <h4>$150.00</h4>
                     </div>
@@ -239,7 +239,7 @@
                 <div class="row">
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/LeonardsPolarized.jpg" alt="Leonards Polarized"  />
+                        <img src="img/glassListing/leonardsPolarized.jpg" alt="Leonards Polarized"  />
                         <h3>Leonards | Polar</h3>
                         <h4>$200.00</h4>
                     </div>
@@ -354,13 +354,12 @@
         <div id="modalBG">
             <div class="grid" id="productModal">
                     <div id="rightContent">
-                        <img class="storyBackground" src = "img/modal/mensLeonards1_2.jpg" alt="man with sunglasses">
+                        <img class="storyBackground" src="img/modal/mensLeonards1_2.jpg" alt="man with sunglasses">
                         <div class="closeBtn">X</div>
                         <div id="glassStoryShots">
                             <div><img id="leonardsStory" src="img/modal/mensLeonards1_2.jpg" alt="model with Illesteva Leopards" /></div>
                             <div><img id="leonardsTwoStory" src="img/modal/Leonards2.jpg" alt="model with Illesteva Clear" /></div>
-                            <div><img id="leonardsThreeStory" src="img/modal/mensLeonards3.jpg" alt="model with Illesteva Polarized" /></div>
-                             
+                            <div><img id="leonardsThreeStory" src="img/modal/mensLeonards3.jpg" alt="model with Illesteva Polarized" /></div>   
                         </div>
                     </div>
 
