--- a/mensStyle.html
+++ b/mensStyle.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mensProductList.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
-    <link rel="stylesheet" href="css/footerStyle.css">
     <link rel="icon" href="img/favicon.ico" type="image/icon">
-
 	<title>Illesteva | Mens Style.</title>
 	</head>
 	<body>
@@ -306,7 +304,7 @@
                 <div class="row">
                     <div class="col-4of12" id="waversSection">
                         <img src="img/glassListing/waversClassic.jpg" alt="Wavers Classic" />
-                        <h3>Wavers | Classic</h3>
+                        <h3>Wavers | Class</h3>
                         <h4>$170.00</h4>
                     </div>
                     <a href="">
@@ -444,26 +442,25 @@
             </div>
         </div>
 <!--FOOTER STARTS-->
-	<footer class="footer">
-		<div class="row">
-			<nav class="nav">
-				<ul id="footer-menu">
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="about.html">About</a></li>
-								
-					<li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" class="icon"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="https://twitter.com/illesteva" target="_blank" class="icon"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="https://instagram.com/illesteva" target="_blank" class="icon"><i class="fa fa-instagram"></i></a></li>
-				</ul>
-				
-				<div id="footer-info" class="nav">
-					© 2015 Illesteva&nbsp;&nbsp;All rights reserved
-				</div>		
-			</nav>
-			
-		</div>
-	</footer>
+    <footer class="footer">
+        <div class="row">
+            <nav class="nav">
+                <ul id="footer-menu">
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About</a></li>
 
+                    <li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" class="icon"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/illesteva" target="_blank" class="icon"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://instagram.com/illesteva" target="_blank" class="icon"><i class="fa fa-instagram"></i></a></li>
+                </ul>
+
+                <div id="footer-info" class="nav">
+                    © 2015 Illesteva&nbsp;&nbsp;All rights reserved
+                </div>
+            </nav>
+
+        </div>
+    </footer>
 
     <!--FOOTER ENDS-->
    <script src="js/jquery.js"></script>
