--- a/mensStyle.html
+++ b/mensStyle.html
@@ -175,6 +175,7 @@
         <!--Recommended Styles-->
         <div class="container glassStyles">
             <div class="row">
+                <a href="leonardsMobile.html" id="leonardsClickBox" target=new></a>
                 <div class="col-4of12 styleContainers" id="Leonards">
                     <div class="styleContainer">
                         <div class="styleInfoContainer">
@@ -182,7 +183,7 @@
                             <p>Versatile Style</p>
                         </div>
                         <img class="leonardsDesktop" src="img/winterIllesteva.jpg" alt="Iconinc Man in Winter slopes with Illesteva" />
-                       <a href="leonardsMobile.html" target=new><img class="leonardsMobile" src="img/winterIllestevaMobile.jpg" alt="Iconinc Man in Winter slopes with Illesteva" /></a>
+                       <img class="leonardsMobile" src="img/winterIllestevaMobile.jpg" alt="Iconinc Man in Winter slopes with Illesteva" />
                     </div>
                     <div class="seeMoreBtn" id="leonardBtn"><h4>SEE MORE</h4></div>
                 </div>
