last push fixing the width

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -175,7 +175,7 @@
         <!--Recommended Styles-->
         <div class="container glassStyles">
             <div class="row">
-                <a href="leonardsMobile.html" id="leonardsClickBox" target=new></a>
+                <a href="leonardsMobile.html" id="leonardsClickBox"></a>
                 <div class="col-4of12 styleContainers" id="Leonards">
                     <div class="styleContainer">
                         <div class="styleInfoContainer">
