fixed tablet version

--- a/checkout.html
+++ b/checkout.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
+    <link rel="stylesheet" href="css/checkout.css">
     <!--<link rel="stylesheet" href="css/footerStyle.css">-->
     <link rel="icon" href="img/favicon.ico" type="image/icon">
 	<title>Illesteva | Made in Italy.</title>
@@ -344,7 +345,6 @@
 	<script src="js/jquery.js"></script>
     <script src="js/drop-downs.js"></script>
      <script src="js/productListingModal.js"></script>
-     <script src="js/fixedNav.js"></script>
 	 <script src="js/hamburger.js"></script>
 	<script src="js/animatedDD.js"></script>
 		<script src="http://maps.googleapis.com/maps/api/js"></script>
